pip.txt


pip install airflow
pip install "airflow[s3, postgres]"

pip install "airflow[all_dbs,async,devel,devel_hadoop,celery,jdbc,hdfs,hive,ldap,postgres,rabbitmq,s3]"



"


Collecting librabbitmq>=1.6.1 (from airflow[rabbitmq])
  Using cached librabbitmq-1.6.1.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 20, in <module>
      File "/private/var/folders/8x/4hbrll4504vc9qx7p47gr3c00000gn/T/pip-build-duug4o92/librabbitmq/setup.py", line 191
        except Exception, exc:
                        ^
    SyntaxError: invalid syntax

    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in /private/var/folders/8x/4hbrll4504vc9qx7p47gr3c00000gn/T/pip-build-duug4o92/librabbitmq
(airflow) Anthonys-MacBook:airflow amcclay$






python ~/airflow/dags/tutorial.py


# print the list of active DAGs
airflow list_dags

# prints the list of tasks the "tutorial" dag_id
airflow list_tasks tutorial

# prints the hierarchy of tasks in the tutorial DAG
airflow list_tasks tutorial --tree


# optional, start a web server in debug mode in the background
# airflow webserver --debug &

# start your backfill on a date range
airflow backfill tutorial -s 2015-06-01 -e 2015-06-07


airflow backfill tutorial -s 2017-06-21 -e 2017-06-22




engine = create_engine('postgresql+psycopg2://sqlalchemy_user:11javajava@localhost:' \
                       '5432/sqlalchemydb')
connection = engine.connect()



from sqlalchemy import create_engine
from sqlalchemy import MetaData

airflow webserver -p 8080




engine = create_engine('postgresql+psycopg2://sqlalchemy_user:11javajava@localhost:' \
                       '5432/sqlalchemydb')
connection = engine.connect()


'postgresql+psycopg2://airflow_user:11javajava@localhost:' \
                       '5432/airflowdb')



# initialize the database
airflow initdb
